UVProject modifier Aspect and Scale settings do not work #86268

Closed
opened 2021-03-04 13:47:37 +01:00 by Ludvik Koutny · 6 comments
Contributor

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40

Blender Version
Broken: version: 2.92.0, branch: master (modified), commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: (newest version of Blender that worked as expected)

Short description of error
UVProject modifier Aspect and Scale settings do not work

Exact steps for others to reproduce the error

  1. In an empty .blend file, create a new primitive
  2. Give it a material with visible texture
  3. Apply UVProject modifier
  4. Create an empty
  5. Select the empty to be the Projector Object in the UVProject modifier
  6. Move the empty to verify the UVProject modifier is set up and works
  7. Adjust Scale X/Y or Aspect X/Y parameters
    Result: Aspect X/Y and Scale X/Y parameter adjustments have no effect on the UV projection.
    Expected: Aspect X/Y and Scale X/Y parameter adjustments have some effect on the UV projection.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40 **Blender Version** Broken: version: 2.92.0, branch: master (modified), commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: (newest version of Blender that worked as expected) **Short description of error** UVProject modifier Aspect and Scale settings do not work **Exact steps for others to reproduce the error** 1. In an empty .blend file, create a new primitive 2. Give it a material with visible texture 3. Apply UVProject modifier 4. Create an empty 5. Select the empty to be the Projector Object in the UVProject modifier 6. Move the empty to verify the UVProject modifier is set up and works 7. Adjust Scale X/Y or Aspect X/Y parameters Result: Aspect X/Y and Scale X/Y parameter adjustments have no effect on the UV projection. Expected: Aspect X/Y and Scale X/Y parameter adjustments have some effect on the UV projection.
Author
Contributor

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Member

This is only supposed to work with Cameras as projectors.
This is working fine here:

#86268.blend

This is documented here https://docs.blender.org/manual/en/2.92/modeling/modifiers/modify/uv_project.html#options

So dont see a bug here, will have to close, thx reporting anyways.
(not saying this could not be more obvious [maybe from the tooltip or by greying out if no camera object is selected])

This is only supposed to work with Cameras as projectors. This is working fine here: [#86268.blend](https://archive.blender.org/developer/F9866101/T86268.blend) This is documented here https://docs.blender.org/manual/en/2.92/modeling/modifiers/modify/uv_project.html#options So dont see a bug here, will have to close, thx reporting anyways. (not saying this could not be more obvious [maybe from the tooltip or by greying out if no camera object is selected])
Author
Contributor

In #86268#1124093, @lichtwerk wrote:
This is only supposed to work with Cameras as projectors.
This is working fine here:

#86268.blend

This is documented here https://docs.blender.org/manual/en/2.92/modeling/modifiers/modify/uv_project.html#options

So dont see a bug here, will have to close, thx reporting anyways.
(not saying this could not be more obvious [maybe from the tooltip or by greying out if no camera object is selected])

Ohhh... I see. Yes. I do not think in this day and age it's appropriate for user to need to browse documentation just to figure out why knobs aren't working. I'd definitely at least put it into the tooltips.

> In #86268#1124093, @lichtwerk wrote: > This is only supposed to work with Cameras as projectors. > This is working fine here: > > [#86268.blend](https://archive.blender.org/developer/F9866101/T86268.blend) > > This is documented here https://docs.blender.org/manual/en/2.92/modeling/modifiers/modify/uv_project.html#options > > So dont see a bug here, will have to close, thx reporting anyways. > (not saying this could not be more obvious [maybe from the tooltip or by greying out if no camera object is selected]) Ohhh... I see. Yes. I do not think in this day and age it's appropriate for user to need to browse documentation just to figure out why knobs aren't working. I'd definitely at least put it into the tooltips.

This issue was referenced by 91825ebfe2

This issue was referenced by 91825ebfe2cb8ecf6d5c02e11783e44aaa1add84
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86268
No description provided.